# Mag4Device

./: Readme.md
CAD/: F22-SF-0007.SLDASM
CAD/Supplier Parts/: Bearing_R4-2Z_0p25x0p625x0.196_MC_60355K430.SLDPRT
CircuitBoard/: Dal_V2.lbr  EpicMag4.cam  Mag4_V2.brd  Mag4_V2.sch  Readme.md  eagle.epf
CircuitBoard/CAMOutputs/Assembly/: Mag4_V2.txt  PnP_Mag4_V2_front.txt
CircuitBoard/CAMOutputs/DrillFiles/: drill_1_16.xln
CircuitBoard/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_top.gbr
Documentation/: Mag4Doc.pptx  Readme.md
Mag4Software/: Readme.md
Mag4Software/Mag4Pico/: CMakeLists.txt  RpmCalcs.xlsx  mag4.uf2  pico_sdk_import.cmake  serial_visualizer_test.json
Mag4Software/Mag4Pico/adder/: CMakeLists.txt
Mag4Software/Mag4Pico/blink/: CMakeLists.txt  blink.c
Mag4Software/Mag4Pico/encoders/: CMakeLists.txt  pwm_reader.pio  swerve_encoder.c  swerve_encoder.pio
Mag4Software/Mag4Pico/loopirq/: CMakeLists.txt  loopirq.c
Mag4Software/Mag4Pico/mag4/: CMakeLists.txt  mag4.c  mag4.h  mag4_comm.c  pwm_rd4.pio  quad.pio
Mag4Software/Mag4Pico/magreader/: CMakeLists.txt  magreader.c
Mag4Software/Mag4Pico/motordrive/: CMakeLists.txt  motordrive.c
Mag4Software/Mag4Pico/pio_blink/: CMakeLists.txt  blink.pio  pio_blink.c
Mag4Software/Mag4Pico/pwm_rd4/: CMakeLists.txt  pwm_rd4.cpp  pwm_rd4.h  pwm_rd4.pio  pwm_rd4_test.cpp
Mag4Software/Mag4Pico/pwm_reader/: CMakeLists.txt  pwm4.cpp  pwmin.cpp  pwmin.h
Mag4Software/Mag4Pico/stepper/: CMakeLists.txt  spicom.c  stepper.c
Mag4Software/Mag4Pico/testman/: testman.py
Mag4Software/Mag4RoboRio/.wpilib/: wpilib_preferences.json
Mag4Software/Mag4RoboRio/src/main/java/frc/robot/: Mag4.java  Mag4Tester.java  Robot.java
TestSetup/: Readme.md
TestSetup/CAD/: F22-SF-3013.SLDPRT  F22-SF-3014.SLDPRT  F22-SF-3015.SLDPRT  F22-SF-3016.SLDPRT  F22-SF-7001.SLDPRT
TestSetup/CAD/Supplier Parts/: SRX_Mag_Encoder_PCB_CTRE_15-697867.SLDPRT
